@@ -24,7 +24,7 @@ Denora for Windows
             http://www.microsoft.com/express/download/
 
         * Microsoft Windows PlatformSDK:
-            http://www.microsoft.com/downloads/details.aspx?FamilyId=E6E1C3DF-A74F-4207-8586-711EBE331CDC&displaylang=en
+            http://www.microsoft.com/downloads/details.aspx?FamilyID=e6e1c3df-a74f-4207-8586-711ebe331cdc&DisplayLang=en
 
             (NOTE: Although this says for Windows Server 2008, it does infact work on all supported
             versions of Windows. When installing, you should select the Custom option, and ensure
